# Reflekt

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENTS.md  DOCKER.md  Dockerfile  EXAMPLES.md  EXOTIC_LANGUAGES.md  FAQ.md  GLOSSARY.md  IMPROVEMENTS.md  LICENSE  LICENSE_HEADERS.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  docker-compose.yml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bash/: README.md  deploy.sh
cairo/: README.md  Scarb.toml
clarity/: Clarinet.toml  README.md
contracts/: ReputationNFT.sol  hardhat.config.js  package.json
cpp/: CMakeLists.txt  README.md  keccak256.cpp
fe/: README.md  fe.toml
frontend/: app.py
go/: README.md  go.mod  go.sum  signature_verifier.go  signature_verifier_test.go
haskell/: PlutusContract.hs  README.md
html-css/: README.md  index.html  styles.css
ink/: Cargo.toml  README.md
java/: README.md  pom.xml
javascript/: README.md  package.json  wallet-manager.js
motoko/: README.md
move/: Move.toml  README.md
python/: README.md  requirements.txt  web3_cli.py
ruby/: README.md  blockchain_indexer.rb
rust/: Anchor.toml  Cargo.toml  README.md
rust/src/: lib.rs
solidity/: README.md  SimpleToken.sol  hardhat.config.js  package.json
src/: __init__.py  api.py  badge_generator.py  integrations.py  reputation_score.py  wallet_scanner.py
sway/: Forc.toml  README.md
swift/: Package.swift  README.md  WalletKit.swift
(+36 files in other folders)
