[package]
name = "counter-program"
version = "0.1.0"
edition = "2021"
description = "A simple Solana counter program using Anchor framework"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "3.0.0"
tokio = "1.35.0"
